apps/linkding/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data
              subPath: linkding
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: data-pvc
