apps/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
spec:
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
